changes in jenkinsfile

--- a/Junit-5-project/Jenkinsfile
+++ b/Junit-5-project/Jenkinsfile
@@ -4,14 +4,14 @@ pipeline {
   stage('Maven Compile'){
      steps{
         echo 'Project compile stage'
-        bat label: 'Compilation running', script: '''mvn compile'''
+        bat label: 'Compilation running', script: '''mvn -f junit5-project/pom.xml compile'''
              }
   }
 
   stage('Unit Test') {
      steps {
         echo 'Project Testing stage'
-        bat label: 'Test running', script: '''mvn test'''
+        bat label: 'Test running', script: '''mvn -f junit5-project/pom.xml test'''
 
              }
       }
@@ -24,7 +24,7 @@ pipeline {
 
       stage('SonarQube'){
      steps{
-           bat label: '', script: '''mvn sonar:sonar \
+           bat label: '', script: '''mvn -f junit5-project/pom.xml sonar:sonar \
            -Dsonar.host.url=http://localhost:9000 \
            -Dsonar.login=squ70c94293b7743fb191ab3227d5e2031d649e6e24'''
         }
@@ -33,7 +33,7 @@ pipeline {
   stage('Maven Package'){
      steps{
         echo 'Project packaging stage'
-        bat label: 'Project packaging', script: '''mvn package'''
+        bat label: 'Project packaging', script: '''mvn -f junit5-project/pom.xml package'''
      }
   }
 
